--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "webpacker_workshop",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^10.12.5",
+    "tempusdominus-bootstrap-4": "^5.39.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
